--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HomeWork1</title>
+    <title>Студия</title>
 </head>
 <body>
-   <ul>
-    <li> 
-<a href="">link</a>
-    </li>
-    <li>
-<a href="">link</a>
-    </li>
-    <li>
-<a href="">link</a>
-    </li>
-   </ul> 
+  <nav>
+    <ul>
+        <li> 
+    <a href="">link</a>
+        </li>
+        <li>
+    <a href="">link</a>
+        </li>
+        <li>
+    <a href="">link</a>
+        </li>
+       </ul> 
+  </nav>
+    
 </body>
 </html>
