--- a/index.html
+++ b/index.html
@@ -1,124 +1,120 @@
-<!DOCTYPE html>
-<html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Студія</title>
-</head>
-<body>
-        <!-- Шапка сторінки -->
-    <header>
-        <!-- Логотип сайту -->
-        <a href="./index.html">WebStudio</a>
-<nav>
-        <!-- Навігація на інші сторінки -->
-          <ul>
-            <li>
-            <a href="">Студія</a>
-            </li>
-            <li>
-            <a href="">Портфоліо</a>
-            </li>
-            <li>
-            <a href="">Контакти</a>
-            </li>
-          </ul>
-</nav>
-    <!-- Контактна інформація -->
-  <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-  <a href="tel:+380961111111">+38 096 111 11 11</a>
-  </header>
-  <!-- Основний контент сторінки -->
-<main>
-    <div> 
-        <h1>
-        Ефективні рішення для вашого бізнесу
-        </h1>
-        <button type="button">Замовити послугу</button>
-    </div>
-    <div>
-        <h3>
-        УВАГА ДО ДЕТАЛЕЙ
-        </h3>
-        <p>
-        Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
-        </p>
-        <h3>
-        ПУНКТУАЛЬНІСТЬ
-        </h3>
-        <p>
-        Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-        </p>
-        <h3>
-        ПЛАНУВАННЯ
-        </h3>
-        <p>
-        Так само консультація з широким активом значною мірою зумовлює.
-        </p>
-        <h3>
-        СУЧАСНІ ТЕХНОЛОГІЇ
-        </h3>
-        <p>
-        Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-        </p>
-    </div>  
-<div>
-    <h2>
-    Чим ми займаємося
-    </h2>   
-        <section> 
-     <ul>
-        <li>
-                <img src="images/img1.jpg" alt="Зображення 1" height="294" width="370"/>
-        </li>
-        <li>
-                <img src="images/img2.jpg" alt="Зображення 2" height="294" width="370"/>
-        </li>
-        <li>
-                <img src="images/img3.jpg" alt="Зображення 3" height="294" width="370"/>
-         </li>
-     </ul>      
-    </section>
-</div> 
-<div>
-    <h2>
-    Наша команда
-    </h2>
-    <section> 
-        <ul>
-           <li>
-            <img src="images/img_p1.jpg" alt="Зображення співробітника 1" height="260" width="270"/>
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
-           </li>
-           <li>
-            <img src="images/img_p2.jpg" alt="Зображення співробітника 2" height="260" width="270"/>
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>  
-        </li>
-           <li>
-            <img src="images/img_p3.jpg" alt="Зображення співробітника 3" height="260" width="270"/>
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>    
-        </li>
-            <li>
-            <img src="images/img_p4.jpg" alt="Зображення співробітника 4" height="260" width="270"/>
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>    
-        </li>
-        </ul>      
-       </section>
-</div>
-</main>
-<!-- Пыдвал сторінки -->
-<footer>
-  <!-- Логотип сайту -->
-<a href="./index.html">WebStudio</a>
-<p>м. Київ, пр-т Лесі Українки, 26</p> 
-  <!-- Контактна інформація -->
-<a href="mailto:info@devstudio.com">info@devstudio.com</a>
-<a href="tel:+380961111111">+38 096 111 11 11</a>  
-</footer>
-</body>
+<!DOCTYPE html>↩
+<html lang="uk">↩
+<head>↩
+    <meta charset="UTF-8">↩
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">↩
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">↩
+    <title>Студія</title>↩
+</head>↩
+<body>↩
+        <!-- Шапка сторінки -->↩
+    <header>↩
+        <!-- Логотип сайту -->↩
+        <a href="./index.html">WebStudio</a>↩
+<nav>↩
+        <!-- Навігація на інші сторінки -->↩
+          <ul>↩
+            <li>↩
+            <a href="">Студія</a>↩
+            </li>↩
+            <li>↩
+            <a href="">Портфоліо</a>↩
+            </li>↩
+            <li>↩
+            <a href="">Контакти</a>↩
+            </li>↩
+          </ul>↩
+</nav>↩
+    <!-- Контактна інформація -->↩
+  <a href="mailto:info@devstudio.com">info@devstudio.com</a>↩
+  <a href="tel:+380961111111">+38 096 111 11 11</a>↩
+  </header>↩
+  <!-- Основний контент сторінки -->↩
+<main>↩
+    <section> ↩
+        <h1>↩
+        Ефективні рішення для вашого бізнесу↩
+        </h1>↩
+        <button type="button">Замовити послугу</button>↩
+    </section>↩
+    <section>↩
+        <h3>↩
+        УВАГА ДО ДЕТАЛЕЙ↩
+        </h3>↩
+        <p>↩
+        Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.↩
+        </p>↩
+        <h3>↩
+        ПУНКТУАЛЬНІСТЬ↩
+        </h3>↩
+        <p>↩
+        Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.↩
+        </p>↩
+        <h3>↩
+        ПЛАНУВАННЯ↩
+        </h3>↩
+        <p>↩
+        Так само консультація з широким активом значною мірою зумовлює.↩
+        </p>↩
+        <h3>↩
+        СУЧАСНІ ТЕХНОЛОГІЇ↩
+        </h3>↩
+        <p>↩
+        Значимість цих проблем настільки очевидна, що реалізація планових завдань.↩
+        </p>↩
+    </section>  ↩
+<section>↩
+    <h2>↩
+    Чим ми займаємося↩
+    </h2>   ↩
+     <ul>↩
+        <li>↩
+                <img src="images/img1.jpg" alt="Зображення 1" height="294" width="370"/>↩
+        </li>↩
+        <li>↩
+                <img src="images/img2.jpg" alt="Зображення 2" height="294" width="370"/>↩
+        </li>↩
+        <li>↩
+                <img src="images/img3.jpg" alt="Зображення 3" height="294" width="370"/>↩
+         </li>↩
+     </ul>      ↩
+</section> ↩
+<section>↩
+    <h2>↩
+    Наша команда↩
+    </h2>↩
+        <ul>↩
+           <li>↩
+            <img src="images/img_p1.jpg" alt="Зображення співробітника 1" height="260" width="270"/>↩
+            <h3>Ігор Дем'яненко</h3>↩
+            <p>Product Designer</p>↩
+           </li>↩
+           <li>↩
+            <img src="images/img_p2.jpg" alt="Зображення співробітника 2" height="260" width="270"/>↩
+            <h3>Ольга Рєпіна</h3>↩
+            <p>Frontend Developer</p>  ↩
+        </li>↩
+           <li>↩
+            <img src="images/img_p3.jpg" alt="Зображення співробітника 3" height="260" width="270"/>↩
+            <h3>Микола Тарасов</h3>↩
+            <p>Marketing</p>    ↩
+        </li>↩
+            <li>↩
+            <img src="images/img_p4.jpg" alt="Зображення співробітника 4" height="260" width="270"/>↩
+            <h3>Михайло Єрмаков</h3>↩
+            <p>UI Designer</p>    ↩
+        </li>↩
+        </ul>      ↩
+</section>↩
+</main>↩
+<!-- Пыдвал сторінки -->↩
+<footer>↩
+  <!-- Логотип сайту -->↩
+<a href="./index.html">WebStudio</a>↩
+<p>м. Київ, пр-т Лесі Українки, 26</p> ↩
+  <!-- Контактна інформація -->↩
+<a href="mailto:info@devstudio.com">info@devstudio.com</a>↩
+<a href="tel:+380961111111">+38 096 111 11 11</a>  ↩
+</footer>↩
+</body>↩
 </html>
