--- a/index.html
+++ b/index.html
@@ -111,10 +111,18 @@
 <footer>
   <!-- Логотип сайту -->
 <a href="./index.html">WebStudio</a>
+<a href="https://goo.gl/maps/YGeaYCYN1t7PBg3d7">геотегінг</a>
 <p>м. Київ, пр-т Лесі Українки, 26</p> 
   <!-- Контактна інформація -->
-<a href="mailto:info@devstudio.com">info@devstudio.com</a>
-<a href="tel:+380961111111">+38 096 111 11 11</a>  
+<ul>
+    <li>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+    </li>
+    <li>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>  
+    </li>
+</ul>
+
 </footer>
 </body>
 </html>
