--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
         <!-- Шапка сторінки -->
     <header>
-        <!-- Логотип сайту -->
+        <nav>
+            <!-- Логотип сайту -->
         <a href="./index.html">WebStudio</a>
-<nav>
         <!-- Навігація на інші сторінки -->
           <ul>
             <li>
@@ -26,9 +26,15 @@
           </ul>
 </nav>
     <!-- Контактна інформація -->
-  <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-  <a href="tel:+380961111111">+38 096 111 11 11</a>
-  </header>
+    <ul>
+        <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+    </ul>
+    </header>
   <!-- Основний контент сторінки -->
 <main>
     <section> 
@@ -38,31 +44,44 @@
         <button type="button">Замовити послугу</button>
     </section>
     <section>
+        <h2 hidden>
+        Переваги
+        </h2>
+<ul>
+    <li>
         <h3>
-        УВАГА ДО ДЕТАЛЕЙ
+            УВАГА ДО ДЕТАЛЕЙ
         </h3>
-        <p>
-        Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
-        </p>
+            <p>
+            Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+            </p>
+    </li>
+    <li>
         <h3>
-        ПУНКТУАЛЬНІСТЬ
+            ПУНКТУАЛЬНІСТЬ
         </h3>
-        <p>
-        Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-        </p>
+            <p>
+            Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+            </p>
+    </li>
+    <li>
         <h3>
-        ПЛАНУВАННЯ
+            ПЛАНУВАННЯ
         </h3>
-        <p>
-        Так само консультація з широким активом значною мірою зумовлює.
-        </p>
+            <p>
+            Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+    </li>
+    <li>
         <h3>
-        СУЧАСНІ ТЕХНОЛОГІЇ
+            СУЧАСНІ ТЕХНОЛОГІЇ
         </h3>
-        <p>
-        Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-        </p>
-    </section>  
+            <p>
+            Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+            </p>
+    </li>
+</ul>     
+</section>  
 <section>
     <h2>
     Чим ми займаємося
@@ -83,23 +102,23 @@
     <h2>
     Наша команда
     </h2>
-            <ul>
-           <li>
+        <ul>
+        <li>
             <img src="images/img_p1.jpg" alt="Зображення співробітника 1" height="260" width="270"/>
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
-           </li>
-           <li>
+        </li>
+        <li>
             <img src="images/img_p2.jpg" alt="Зображення співробітника 2" height="260" width="270"/>
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>  
         </li>
-           <li>
+        <li>
             <img src="images/img_p3.jpg" alt="Зображення співробітника 3" height="260" width="270"/>
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>    
         </li>
-            <li>
+        <li>
             <img src="images/img_p4.jpg" alt="Зображення співробітника 4" height="260" width="270"/>
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>    
@@ -111,9 +130,11 @@
 <footer>
   <!-- Логотип сайту -->
 <a href="./index.html">WebStudio</a>
-<a href="https://goo.gl/maps/YGeaYCYN1t7PBg3d7">геотегінг</a>
-<p>м. Київ, пр-т Лесі Українки, 26</p> 
-  <!-- Контактна інформація -->
+<address>
+<p>
+м. Київ, пр-т Лесі Українки, 26
+</p>
+<!-- Контактна інформація -->
 <ul>
     <li>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -122,7 +143,7 @@
         <a href="tel:+380961111111">+38 096 111 11 11</a>  
     </li>
 </ul>
-
+</address>
 </footer>
 </body>
 </html>
